Fixed Unread Bar Spacing

--- a/discorddark.css
+++ b/discorddark.css
@@ -260,6 +260,10 @@ h2.name-3l27Hl, h2.membersGroup-v9BXpm, .name-3l27Hl .overflow-WK9Ogt {
 	padding-right: .5rem!important;
 	margin-right: 1.5rem!important;
 }
+.isUnread-3Ef-o9 {
+	margin-top: .75rem!important;
+	margin-bottom: 1.75rem!important;
+}
 
 /* Buttons */
 /* Hover Color Change: -23, -50, -31 */
